<resources>
    <string name="rc_action_bar_back">Back</string>
    <string name="rc_action_bar_ok">OK</string>
    <string name="rc_conversation_list_title">Conversation List</string>
    <string name="rc_conversation_list_empty_prompt">No chats info</string>
    <string name="rc_conversation_list_notice_network_unavailable">Network unavailable, please check your network</string>
    <string name="rc_conversation_list_notice_proxy_unavailable">Proxy unavailable,please check your proxy</string>
    <string name="rc_conversation_list_notice_disconnect">Unable to connect to server</string>
    <string name="rc_conversation_list_notice_kicked">This account has been logged-in on other devices</string>
    <string name="rc_conversation_list_notice_connecting">Connecting...</string>
    <string name="rc_conversation_list_dialog_set_top">Stick on Top</string>
    <string name="rc_conversation_list_dialog_cancel_top">Remove from top</string>
    <string name="rc_conversation_list_dialog_remove">Remove from chat list</string>
    <string name="rc_conversation_list_popup_set_top">Topped</string>
    <string name="rc_conversation_list_popup_cancel_top">Removed from top</string>
    <string name="rc_conversation_unread_dot">99+</string>
    <string name="rc_item_divided_string">、</string>
    <string name="rc_item_invitation">has invited</string>
    <string name="rc_item_you">you</string>
    <string name="rc_item_you_invitation">You have invited</string>
    <string name="rc_item_you_remove_self">You have removed by</string>
    <string name="rc_item_remove_group_member">has removed</string>
    <string name="rc_item_you_remove_group_member">You have removed</string>
    <string name="rc_item_remove">from the group</string>
    <string name="rc_item_join_group">" joined the group"</string>
    <string name="rc_join_group">" to joined the group"</string>
    <string name="rc_item_created_group">has created the group</string>
    <string name="rc_item_you_created_group">You have created the group</string>
    <string name="rc_item_dismiss_groups">" dismissed the group"</string>
    <string name="rc_item_quit_groups">" has quit the group"</string>
    <string name="rc_item_change_group_name"> changed the group name to </string>
    <string name="rc_item_you_change_group_name">You changed the group name to </string>
    <string name="rc_item_group_notification_summary">[Group Announcement]</string>
    <string name="rc_yesterday_format">Yesterday</string>
    <string name="rc_date_yesterday">Yesterday</string>
    <string name="rc_date_year">year</string>
    <string name="rc_date_month">month</string>
    <string name="rc_date_day">day</string>
    <string name="rc_date_monday">Monday</string>
    <string name="rc_date_tuesday">Tuesday</string>
    <string name="rc_date_wednesday">Wednesday</string>
    <string name="rc_date_thursday">Thursday</string>
    <string name="rc_date_friday">Friday</string>
    <string name="rc_date_saturday">Saturday</string>
    <string name="rc_date_sunday">Sunday</string>
    <string name="rc_date_am">AM</string>
    <string name="rc_date_morning">AM</string>
    <string name="rc_date_noon">PM</string>
    <string name="rc_date_pm">PM</string>
    <string name="rc_date_night">PM</string>
    <string name="rc_default_message">The current version does not support viewing this message</string>
    <string name="rc_conversation_summary_content_image">[Image]</string>
    <string name="rc_conversation_summary_content_voice">[Voice]</string>
    <string name="rc_conversation_summary_content_rich_text">[Message]</string>
    <string name="rc_conversation_summary_content_location">[Location]</string>
    <string name="rc_conversation_summary_content_file">[File]</string>
    <string name="rc_conversation_summary_content_sight">[Video]</string>
    <string name="rc_conversation_summary_content_card">[Card]</string>
    <string name="rc_conversation_summary_content_sticker">[Sticker]</string>
    <string name="rc_conversation_summary_content_rp">[Red Packet]</string>
    <string name="rc_conversation_summary_content_vst">[Audio video call]</string>
    <string name="rc_conversation_summary_content_combine">[Chat History]</string>
    <string name="rc_conversation_summary_content_draft">[Draft]</string>
    <string name="rc_conversation_summary_content_mentioned">[You were mentioned]</string>
    <string name="rc_conversation_summary_content_burn">[Secret Chat]</string>
    <string name="rc_location_title">Location</string>
    <string name="rc_ext_plugin_location">Location</string>
    <string name="rc_ext_plugin_image">Image</string>
    <string name="rc_ext_plugin_file">File</string>
    <string name="rc_ext_plugin_destruct">Secret Chat</string>
    <string name="rc_real_time_location_start">Start a location sharing</string>
    <string name="rc_real_time_location_sharing">Start a location sharing</string>
    <string name="rc_search">Search</string>
    <string name="rc_recalled_a_message">&#160; has recalled a message</string>
    <string name="rc_click_to_view">Click to View</string>
    <string name="rc_reference">Quote</string>
    <string name="rc_reference_link">[RichContent]</string>
    <string name="rc_reference_file">[file]</string>
    <string name="rc_search_file_prefix">[File]&#160;</string>
    <string name="rc_dialog_item_message_delete">Delete</string>
    <string name="rc_dialog_item_message_copy">Copy</string>
    <string name="rc_dialog_item_message_recall">Recall</string>
    <string name="rc_dialog_item_message_reference">Quote</string>
    <string name="rc_dialog_item_message_more">Select&#8230;</string>
    <string name="rc_dialog_destruct_hint">Messages are automatically destroyed after viewing, and replication or forwarding of messages is forbidden. The server does not retain message records</string>
    <string name="rc_voice_press_to_input">Hold to Talk</string>
    <string name="rc_voice_release_to_send">Release to Send</string>
    <string name="rc_voice_rec">Slide up to cancel</string>
    <string name="rc_voice_cancel">Release to cancel</string>
    <string name="rc_emoji_smiley_face">Sliley Face</string>
    <string name="rc_emoji_grinning_face">Grinning Face</string>
    <string name="rc_emoji_smiley">Smiley</string>
    <string name="rc_emoji_cute">Cute</string>
    <string name="rc_emoji_winking_face">Winking Face</string>
    <string name="rc_emoji_heart_eyes">Heart Eyes</string>
    <string name="rc_emoji_blowing_kiss">Blowing Kiss</string>
    <string name="rc_emoji_kiss_face">Kiss Face</string>
    <string name="rc_emoji_crazy_face">Crazy Face</string>
    <string name="rc_emoji_tongue_out">Tongue Out</string>
    <string name="rc_emoji_flushed_face">Flushed Face</string>
    <string name="rc_emoji_grinning_with_smiling">Grinning With Smiling</string>
    <string name="rc_emoji_pensive">Pensive</string>
    <string name="rc_emoji_pleased">Pleased</string>
    <string name="rc_emoji_dissatisfied">Dissatisfied</string>
    <string name="rc_emoji_worried_face">Worried Face</string>
    <string name="rc_emoji_disappointed_face">Disappointed Face</string>
    <string name="rc_emoji_helpless_face">Helpless Face</string>
    <string name="rc_emoji_crying">Crying</string>
    <string name="rc_emoji_laughing_tears">Laughing Tears</string>
    <string name="rc_emoji_sobbing">Sobbing</string>
    <string name="rc_emoji_sleepy_face">Sleepy Face</string>
    <string name="rc_emoji_cold_sweat">Cold Sweat</string>
    <string name="rc_emoji_happy_sweat">Happy Sweat</string>
    <string name="rc_emoji_sweat">Sweat</string>
    <string name="rc_emoji_tired_face">Tired Face</string>
    <string name="rc_emoji_weary_face">Weary Face</string>
    <string name="rc_emoji_fearful_face">Fearful Face</string>
    <string name="rc_emoji_scream">Scream</string>
    <string name="rc_emoji_angry_face">Angry Face</string>
    <string name="rc_emoji_mad_face">Mad Face</string>
    <string name="rc_emoji_confounded_face">Confounded Face</string>
    <string name="rc_emoji_big_grin">Big Grin</string>
    <string name="rc_emoji_hungry">Hungry</string>
    <string name="rc_emoji_mask_face">Mask Face</string>
    <string name="rc_emoji_sunglasses">Sunglassed</string>
    <string name="rc_emoji_sleeping">Sleeping</string>
    <string name="rc_emoji_shocked_face">Shocked Face</string>
    <string name="rc_emoji_dizzy_face">Dizzy Face</string>
    <string name="rc_emoji_purple_devil">Purple Devil</string>
    <string name="rc_emoji_devil">Devil</string>
    <string name="rc_emoji_surprised_face">Surprised Face</string>
    <string name="rc_emoji_grimacing_face">Grimacing Face</string>
    <string name="rc_emoji_confused">Confused</string>
    <string name="rc_emoji_mouthless">Mouthless</string>
    <string name="rc_emoji_halo">Halo</string>
    <string name="rc_emoji_smirking_face">Smirking Face</string>
    <string name="rc_emoji_expressionless_face">Expressionless Face</string>
    <string name="rc_emoji_see_no_monkey">See-No-Monkey</string>
    <string name="rc_emoji_hear_no_monkey">Hear-No-Monkey</string>
    <string name="rc_emoji_no_speaking">No Speaking</string>
    <string name="rc_emoji_alien">Alien</string>
    <string name="rc_emoji_pile_of_poo">Pile of Poo</string>
    <string name="rc_emoji_broken_heart">Broken Heart</string>
    <string name="rc_emoji_fire">Fire</string>
    <string name="rc_emoji_anger">Anger</string>
    <string name="rc_emoji_zzz">Zzz</string>
    <string name="rc_emoji_prohibited">Prohibited</string>
    <string name="rc_emoji_star">Star</string>
    <string name="rc_emoji_lightning_bolt">Lighting Bolt</string>
    <string name="rc_emoji_crescent_moon">Crescent Moon</string>
    <string name="rc_emoji_sunny">Sunny</string>
    <string name="rc_emoji_cloudy">Cloudy</string>
    <string name="rc_emoji_cloud">Cloud</string>
    <string name="rc_emoji_snowflake">Snowflake</string>
    <string name="rc_emoji_umbrella">Umbrella</string>
    <string name="rc_emoji_snowman">Snowman</string>
    <string name="rc_emoji_thumbs_up">Thumbs Up</string>
    <string name="rc_emoji_thumbs_down">Thumbs Down</string>
    <string name="rc_emoji_shake_hand">Shake Hand</string>
    <string name="rc_emoji_ok_hand">Ok Hand</string>
    <string name="rc_emoji_oncoming_fist">Oncoming Fist</string>
    <string name="rc_emoji_raised_fist">Raised Fist</string>
    <string name="rc_emoji_victory_hand">Victory Hand</string>
    <string name="rc_emoji_raised_hand">Raised Hand</string>
    <string name="rc_emoji_folded_hands">Folded Hands</string>
    <string name="rc_emoji_pointing_up">Pointing Up</string>
    <string name="rc_emoji_clapping_hands">Clapping Hands</string>
    <string name="rc_emoji_flexed_biceps">Flexed Biceps</string>
    <string name="rc_emoji_family">Family</string>
    <string name="member_buy_success_title">Welcome to FateLink</string>
    <string name="member_buy_success_tip">With unlimited daily swipes, won’t miss every change to meet your crush!</string>
    <string name="get_it">Get It</string>
    <string name="evaluate_tip">If you like our app, please feel free to give us a wonderful review. To show our appreciation, we will issue you superb benefits:</string>
    <string name="yes_i_d_love_to">YES I\'D LOVE TO!</string>
    <string name="no_thanks">No, thanks</string>
    <string name="pay_fail_top_tip">Please try another payment method.Google Play supports👇</string>
    <string name="add_credit_or_debit_card">Add credit or debit card</string>
    <string name="supports_usd_payments">supports USD payments</string>
    <string name="add_paypal">Add PayPal</string>
    <string name="redeem_code">Redeem code</string>
    <string name="try_it_again">Try It Again</string>
    <string name="pay_fail_bottom_tip">Any problem arises, please message our Support Team gmail</string>
    <string name="abandon">Abandon</string>
    <string name="email_address_logo">📮: FateLink.Official@outlook.com</string>
</resources>