<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@mipmap/icon_pay_failed_bg">
        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Oops! Payment Failed 😱"
            android:textColor="@color/color_001912"
            android:textSize="28sp"
            android:fontFamily="@font/cabin_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"/>
        <TextView
            android:id="@+id/dialog_top_tip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_title"
            android:textSize="15sp"
            android:textColor="#666666"
            android:text="@string/pay_fail_top_tip"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="11dp"
            android:fontFamily="@font/cabin_regular"
            android:gravity="center"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pay_fail_one_container"
            android:layout_width="0dp"
            android:layout_height="59dp"
            android:background="@drawable/shape_pay_failed_item_bg"
            app:layout_constraintTop_toBottomOf="@+id/dialog_top_tip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="33dp">
            <ImageView
                android:id="@+id/img_card"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/icon_pay_fail_one"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/img_card"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="11dp"
                android:layout_marginStart="20dp"
                android:text="@string/add_credit_or_debit_card"
                android:textColor="#202323"
                android:textSize="15sp"
                android:fontFamily="@font/cabin_medium"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/img_card"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="11dp"
                android:layout_marginStart="20dp"
                android:text="@string/supports_usd_payments"
                android:textColor="#999999"
                android:textSize="12sp"
                android:fontFamily="@font/cabin_regular"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pay_fail_two_container"
            android:layout_width="0dp"
            android:layout_height="59dp"
            android:background="@drawable/shape_pay_failed_item_bg"
            app:layout_constraintTop_toBottomOf="@+id/pay_fail_one_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="33dp">
            <ImageView
                android:id="@+id/img_paypal"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/icon_pay_fail_two"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/img_paypal"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="20dp"
                android:text="@string/add_paypal"
                android:textColor="#202323"
                android:textSize="15sp"
                android:fontFamily="@font/cabin_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pay_fail_three_container"
            android:layout_width="0dp"
            android:layout_height="59dp"
            android:background="@drawable/shape_pay_failed_item_bg"
            app:layout_constraintTop_toBottomOf="@+id/pay_fail_two_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="33dp">
            <ImageView
                android:id="@+id/img_redeem"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/icon_pay_fail_three"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/img_redeem"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="20dp"
                android:text="@string/redeem_code"
                android:textColor="#202323"
                android:textSize="15sp"
                android:fontFamily="@font/cabin_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/dialog_bottom_tip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pay_fail_three_container"
            android:textSize="15sp"
            android:textColor="#666666"
            android:text="@string/pay_fail_bottom_tip"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/cabin_regular"
            android:gravity="center"/>
        <TextView
            android:id="@+id/dialog_contact_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/dialog_bottom_tip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/email_address_logo"
            android:textSize="18sp"
            android:textColor="@color/color_44F3C4"
            android:fontFamily="@font/cabin_medium"
            android:paddingVertical="10dp"
            android:paddingHorizontal="30dp"
            />

        <TextView
            android:id="@+id/dialog_try_it_again"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@+id/dialog_contact_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_solid_pink_radius_30"
            android:text="@string/try_it_again"
            android:textColor="@color/color_001912"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/cabin_medium"
            />
        <TextView
            android:id="@+id/dialog_abandon"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@+id/dialog_try_it_again"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/abandon"
            android:textColor="#202323"
            android:textSize="16sp"
            android:gravity="center"
            android:fontFamily="@font/cabin_medium"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>