<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/icon_google_evaluate_bg">

        <ImageView
            android:id="@+id/dialog_close"
            android:layout_width="58dp"
            android:layout_height="50dp"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingEnd="15dp"
            android:src="@drawable/icon_black_close"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/top_logo"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="62dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="62dp"
            android:src="@drawable/icon_google_evaluate_top_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialog_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="6dp"
            android:fontFamily="@font/interregular"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/evaluate_tip"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_logo" />

        <TextView
            android:id="@+id/dialog_flash_chat_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:textColor="#FF4F8E"
            android:textSize="22sp"
            android:gravity="center"
            android:layout_marginTop="14dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_content" />

        <TextView
            android:id="@+id/dialog_confirm"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_solid_pink_radius_34"
            android:fontFamily="@font/intersemibold"
            android:gravity="center"
            android:text="@string/yes_i_d_love_to"
            android:textColor="@color/color_001912"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_flash_chat_num" />
        <TextView
            android:id="@+id/dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no_thanks"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:paddingTop="10dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/interregular"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>